[gd_scene load_steps=19 format=3 uid="uid://dw4rs74gsagrn"]

[ext_resource type="Script" uid="uid://ddx3q78woi7jl" path="res://Editor/SoundComponentsItems.gd" id="1_7fqon"]
[ext_resource type="Script" uid="uid://3yuoy3etpxip" path="res://Editor/EditorComposer.gd" id="1_g7rpo"]
[ext_resource type="Script" uid="uid://re8yk5328yco" path="res://Editor/MenuBar/EditorMenuBar.gd" id="1_p8fip"]
[ext_resource type="Script" uid="uid://jr7inyppvgoi" path="res://Editor/GameComponentsList.gd" id="1_sakc5"]
[ext_resource type="Script" uid="uid://bbuinuyr63r63" path="res://Editor/MenuBar/Menu.gd" id="2_bnevv"]
[ext_resource type="Script" uid="uid://b5sxt0fdx3nd3" path="res://Editor/GameEditor.gd" id="2_d6op5"]
[ext_resource type="Script" uid="uid://cuhkonamt3aus" path="res://Editor/MenuBar/File.gd" id="3_6pnfi"]
[ext_resource type="Script" uid="uid://cr1l58jmclcj" path="res://Editor/SoundBoard.gd" id="3_ty45h"]
[ext_resource type="Texture2D" uid="uid://oyfiimbt1x0y" path="res://assets/gameItemsIcons/selectIcon.png" id="6_6pnfi"]
[ext_resource type="Texture2D" uid="uid://cmb4i22o1gq1y" path="res://assets/gameItemsIcons/unLockIcon.png" id="7_vl3l7"]
[ext_resource type="Texture2D" uid="uid://ckv44gvcprwo0" path="res://assets/gameItemsIcons/tapIcon.png" id="8_g7rpo"]
[ext_resource type="Texture2D" uid="uid://do6yk8uk1nup3" path="res://assets/gameItemsIcons/holdIcon.png" id="9_fp4jx"]
[ext_resource type="Texture2D" uid="uid://d1n862qhib3xx" path="res://assets/gameItemsIcons/powerIcon.png" id="10_6548f"]
[ext_resource type="Texture2D" uid="uid://c7trhntorrf6m" path="res://assets/gameItemsIcons/speedIcon.png" id="11_p5hb3"]
[ext_resource type="Texture2D" uid="uid://cwd2tbyrd7ani" path="res://assets/gameItemsIcons/fadeIcon.png" id="12_4las8"]
[ext_resource type="Texture2D" uid="uid://dgsnb7bfdmvxl" path="res://assets/gameItemsIcons/soundIcon.png" id="13_1a345"]
[ext_resource type="Texture2D" uid="uid://bl4jk8gih08u4" path="res://assets/gameItemsIcons/noteIcon.png" id="14_nlio8"]
[ext_resource type="Texture2D" uid="uid://wt08ilca7rq5" path="res://assets/gameItemsIcons/sectionIcon.png" id="15_lhgse"]

[node name="Editor Composer" type="VBoxContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_g7rpo")

[node name="MenuBar" type="FlowContainer" parent="."]
z_index = 2
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
script = ExtResource("1_p8fip")

[node name="MenuBar" type="MenuBar" parent="MenuBar"]
layout_mode = 2
script = ExtResource("2_bnevv")

[node name="File" type="PopupMenu" parent="MenuBar/MenuBar"]
title = "Arquivo"
size = Vector2i(100, 143)
item_count = 5
item_0/text = "Novo"
item_0/id = 0
item_1/text = "Abrir"
item_1/id = 1
item_2/text = "Salvar"
item_2/id = 2
item_3/text = "Exportar"
item_3/id = 3
item_4/text = "Sair"
item_4/id = 4
script = ExtResource("3_6pnfi")
_editor_scene = 2

[node name="Edit" type="PopupMenu" parent="MenuBar/MenuBar"]
auto_translate_mode = 1
title = "Editar"
size = Vector2i(106, 100)
item_count = 3
item_0/text = "Configurações"
item_0/id = 0
item_1/text = "Efeito de Poder nos selecionados"
item_1/id = 1
item_2/text = "Limpar Gear"
item_2/id = 2

[node name="Compose" type="Button" parent="MenuBar"]
visible = false
layout_mode = 2
text = "Compose"

[node name="Test" type="Button" parent="MenuBar"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Testar"

[node name="Undo" type="Button" parent="MenuBar"]
layout_mode = 2
tooltip_text = "Undo button.
Shortcut: \"Ctrl + z\""
disabled = true
text = "<"

[node name="Redo" type="Button" parent="MenuBar"]
layout_mode = 2
tooltip_text = "Redo button.
Shortcut: \"Ctrl + y\""
disabled = true
text = ">"

[node name="FlowContainer2" type="FlowContainer" parent="MenuBar"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
vertical = true

[node name="Gear Type" type="OptionButton" parent="MenuBar/FlowContainer2"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "4 Botões"
popup/item_0/id = 4
popup/item_1/id = 0
popup/item_1/disabled = true
popup/item_1/separator = true
popup/item_2/text = "5 Botões"
popup/item_2/id = 5
popup/item_3/id = 0
popup/item_3/disabled = true
popup/item_3/separator = true
popup/item_4/text = "6 Botões"
popup/item_4/id = 6

[node name="Difficulty" type="OptionButton" parent="MenuBar/FlowContainer2"]
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "Facil"
popup/item_0/id = 0
popup/item_1/id = 5
popup/item_1/separator = true
popup/item_2/text = "Normal"
popup/item_2/id = 1
popup/item_3/id = 4
popup/item_3/separator = true
popup/item_4/text = "Hard"
popup/item_4/id = 2
popup/item_5/id = 6
popup/item_5/separator = true
popup/item_6/text = "Maximus"
popup/item_6/id = 3

[node name="Stars" type="SpinBox" parent="MenuBar/FlowContainer2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
min_value = 1.0
max_value = 30.0
value = 1.0
suffix = "Estrelas"

[node name="FlowContainer" type="FlowContainer" parent="MenuBar"]
layout_mode = 2
size_flags_horizontal = 10
vertical = true

[node name="RichTextLabel2" type="RichTextLabel" parent="MenuBar/FlowContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Grid: "
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="SnapDivisor" type="OptionButton" parent="MenuBar/FlowContainer"]
layout_mode = 2
tooltip_text = "Faz uma grid baseado no BPM.

1/1 - ... - 1/16: Divisões extras da grid baseado no BPM."
selected = 0
item_count = 6
popup/item_0/text = "1/1"
popup/item_0/id = 0
popup/item_1/text = "1/2"
popup/item_1/id = 1
popup/item_2/text = "1/4"
popup/item_2/id = 2
popup/item_3/text = "1/8"
popup/item_3/id = 3
popup/item_4/text = "1/12"
popup/item_4/id = 4
popup/item_5/text = "1/16"
popup/item_5/id = 5

[node name="RichTextLabel" type="RichTextLabel" parent="MenuBar/FlowContainer"]
layout_mode = 2
size_flags_vertical = 3
text = " Velocidade: "
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speed" type="SpinBox" parent="MenuBar/FlowContainer"]
layout_mode = 2
tooltip_text = "Define a velocidade de queda das notas. Também pode funcionar como um zoom no Compositor.

Velocidade mínima: 1.0
Velocidade máxima: 10.0

Observação: Não altera a posição real delas."
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0
update_on_text_changed = true

[node name="Middle" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Sound Components List" type="ItemList" parent="Middle"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_7fqon")

[node name="Close Button" type="Button" parent="Middle/Sound Components List"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.65
offset_top = -15.5
offset_right = -6.64999
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "<"

[node name="Resize Button" type="Button" parent="Middle/Sound Components List"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_right = 2.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.5, 1)
mouse_default_cursor_shape = 10

[node name="Game" type="PanelContainer" parent="Middle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Game" type="Button" parent="Middle/Game"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
flat = true
script = ExtResource("2_d6op5")

[node name="Focus Effect" type="ReferenceRect" parent="Middle/Game/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(1, 1, 1, 1)
border_width = 5.0
editor_only = false

[node name="Mouse Time" type="PanelContainer" parent="Middle/Game/Game"]
visible = false
layout_mode = 1
offset_right = 83.0
offset_bottom = 33.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Middle/Game/Game/Mouse Time"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Middle/Game/Game/Mouse Time/MarginContainer"]
layout_mode = 2
mouse_filter = 2
text = "00:00:000"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game Components List" type="ItemList" parent="Middle"]
clip_contents = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
item_count = 14
item_0/text = "---- Ferramentas ----"
item_0/selectable = false
item_1/text = "Selecionar (E)"
item_1/icon = ExtResource("6_6pnfi")
item_2/text = "Un/lock"
item_2/icon = ExtResource("7_vl3l7")
item_2/disabled = true
item_3/text = "---- Notas ----"
item_3/selectable = false
item_4/text = "Tap (B)"
item_4/icon = ExtResource("8_g7rpo")
item_5/text = "Hold (V)"
item_5/icon = ExtResource("9_fp4jx")
item_6/text = "---- Efeitos ----"
item_6/selectable = false
item_7/text = "Poder (G)"
item_7/icon = ExtResource("10_6548f")
item_8/text = "Velocidade (Z)"
item_8/icon = ExtResource("11_p5hb3")
item_9/text = "Fade (F)"
item_9/icon = ExtResource("12_4las8")
item_10/text = "Som"
item_10/icon = ExtResource("13_1a345")
item_10/disabled = true
item_11/text = "---- Anotações ----"
item_11/selectable = false
item_12/text = "Comentário (C)"
item_12/icon = ExtResource("14_nlio8")
item_13/text = "Seção (X)"
item_13/icon = ExtResource("15_lhgse")
script = ExtResource("1_sakc5")

[node name="Resize Button" type="Button" parent="Middle/Game Components List"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 6.0
grow_vertical = 2
scale = Vector2(0.5, 1)
mouse_default_cursor_shape = 10

[node name="SoundBoard" type="FlowContainer" parent="."]
z_index = 2
clip_contents = true
layout_mode = 2
size_flags_vertical = 8
script = ExtResource("3_ty45h")

[node name="Time" type="TextEdit" parent="SoundBoard"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "00:00:000"
placeholder_text = "00:00:000"
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="Time Percentage" type="TextEdit" parent="SoundBoard"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
size_flags_vertical = 4
text = "0.0%"
placeholder_text = "0.0%"
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false

[node name="Play" type="Button" parent="SoundBoard"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Play"

[node name="Stop" type="Button" parent="SoundBoard"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Reset"

[node name="SpeedContainer" type="VBoxContainer" parent="SoundBoard"]
layout_mode = 2
alignment = 1

[node name="SpeedText" type="TextEdit" parent="SoundBoard/SpeedContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "100%"
placeholder_text = "0%"
emoji_menu_enabled = false
drag_and_drop_selection_enabled = false
scroll_past_end_of_file = true
scroll_fit_content_height = true

[node name="SpeedSlider" type="HSlider" parent="SoundBoard/SpeedContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 300.0
value = 100.0
tick_count = 4
ticks_on_borders = true

[node name="Time Slider" type="HSlider" parent="SoundBoard"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.1
tick_count = 15

[node name="TransferToHolder" type="Node2D" parent="."]

[connection signal="pressed" from="MenuBar/Test" to="MenuBar" method="_on_test_pressed"]
[connection signal="pressed" from="MenuBar/Undo" to="MenuBar" method="_on_undo_pressed"]
[connection signal="pressed" from="MenuBar/Redo" to="MenuBar" method="_on_redo_pressed"]
[connection signal="item_selected" from="MenuBar/FlowContainer2/Gear Type" to="MenuBar" method="_on_gear_type_item_selected"]
[connection signal="item_selected" from="MenuBar/FlowContainer2/Difficulty" to="MenuBar" method="_on_difficulty_item_selected"]
[connection signal="value_changed" from="MenuBar/FlowContainer2/Stars" to="MenuBar" method="_on_stars_value_changed"]
[connection signal="item_selected" from="MenuBar/FlowContainer/SnapDivisor" to="MenuBar" method="_on_snap_divisor_item_selected"]
[connection signal="value_changed" from="MenuBar/FlowContainer/Speed" to="MenuBar" method="_on_speed_value_changed"]
[connection signal="pressed" from="Middle/Sound Components List/Close Button" to="Middle/Sound Components List" method="_on_close_button_pressed"]
[connection signal="button_down" from="Middle/Sound Components List/Resize Button" to="Middle/Sound Components List" method="_on_resize_button_down"]
[connection signal="button_up" from="Middle/Sound Components List/Resize Button" to="Middle/Sound Components List" method="_on_resize_button_up"]
[connection signal="mouse_entered" from="Middle/Game/Game" to="Middle/Game/Game" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Middle/Game/Game" to="Middle/Game/Game" method="_on_mouse_exited"]
[connection signal="item_selected" from="Middle/Game Components List" to="Middle/Game Components List" method="_on_item_selected"]
[connection signal="button_down" from="Middle/Game Components List/Resize Button" to="Middle/Game Components List" method="_on_resize_button_button_down"]
[connection signal="button_up" from="Middle/Game Components List/Resize Button" to="Middle/Game Components List" method="_on_resize_button_button_up"]
[connection signal="focus_entered" from="SoundBoard/Time" to="SoundBoard" method="_on_time_focus_entered"]
[connection signal="focus_exited" from="SoundBoard/Time" to="SoundBoard" method="_on_time_focus_exited"]
[connection signal="text_changed" from="SoundBoard/Time" to="SoundBoard" method="_on_time_text_changed"]
[connection signal="focus_exited" from="SoundBoard/Time Percentage" to="SoundBoard" method="_on_time_percentage_focus_exited"]
[connection signal="text_changed" from="SoundBoard/Time Percentage" to="SoundBoard" method="_on_time_percentage_text_changed"]
[connection signal="pressed" from="SoundBoard/Play" to="SoundBoard" method="_on_play_pressed"]
[connection signal="pressed" from="SoundBoard/Stop" to="SoundBoard" method="_on_stop_pressed"]
[connection signal="focus_exited" from="SoundBoard/SpeedContainer/SpeedText" to="SoundBoard" method="_on_speed_text_focus_exited"]
[connection signal="text_changed" from="SoundBoard/SpeedContainer/SpeedText" to="SoundBoard" method="_on_speed_text_text_changed"]
[connection signal="drag_ended" from="SoundBoard/SpeedContainer/SpeedSlider" to="SoundBoard" method="_on_speed_slider_drag_ended"]
[connection signal="drag_started" from="SoundBoard/SpeedContainer/SpeedSlider" to="SoundBoard" method="_on_speed_slider_drag_started"]
[connection signal="drag_ended" from="SoundBoard/Time Slider" to="SoundBoard" method="_on_time_slider_drag_ended"]
[connection signal="drag_started" from="SoundBoard/Time Slider" to="SoundBoard" method="_on_time_slider_drag_started"]
